--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "def permutation(n,k):\n",
-    "    return n"
+    "    return factorial(n) / "
    ]
   },
   {
