--- a/index.ipynb
+++ b/index.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "def permutation(n,k):\n",
-    "    return factorial(n) / "
+    "    return factorial(n) / factorial(n-k)"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    None"
+    "    N"
    ]
   },
   {
