--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    N"
+    "    return(factorial(n) / factorial)"
    ]
   },
   {
