--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "def combination(n,k):\n",
-    "    return(factorial(n) / factorial(n-k) * factorial(k))"
+    "    return(factorial(n) / (factorial(n-k) * factorial(k)))"
    ]
   },
   {
