--- a/index.ipynb
+++ b/index.ipynb
@@ -152,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample = combinat"
+    "sample = combination(10,5)"
    ]
   },
   {
