--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "draw_cons = None\n",
+    "draw_cons = combination\n",
     "draw_vow = None"
    ]
   },
