--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "order_5_letters = None"
+    "order_5_letters = factorial(5)"
    ]
   },
   {
