--- a/index.ipynb
+++ b/index.ipynb
@@ -262,7 +262,7 @@
    "outputs": [],
    "source": [
     "# your code here  # the answer is 2627625.0\n",
-    "factorial(1)"
+    "factorial(16)/(4 *)"
    ]
   },
   {
