--- a/index.ipynb
+++ b/index.ipynb
@@ -257,12 +257,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "319256437.5"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# your code here  # the answer is 2627625.0\n",
-    "factorial(16)/(4 *)"
+    "factorial(16)/(16 ** 4)"
    ]
   },
   {
