--- a/index.ipynb
+++ b/index.ipynb
@@ -257,23 +257,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "63063000.0"
+       "7962624.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here  # the answer is 2627625.0\n",
-    "factorial(16)/(24 ** 4)"
+    "factorial(16)/ 2627625"
    ]
   },
   {
