--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
    ],
    "source": [
     "# your code here  # the answer is 2627625.0\n",
-    "factorial(16)/ 2627625"
+    "combination(16, 4_)"
    ]
   },
   {
