--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
    ],
    "source": [
     "# your code here  # the answer is 2627625.0\n",
-    "combination(16, 4_)"
+    "combination(16, 4) * combination(12, 4) * combinatio"
    ]
   },
   {
