--- a/index.ipynb
+++ b/index.ipynb
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -266,14 +266,14 @@
        "63063000.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here  # the answer is 2627625.0\n",
-    "combination(16, 4) * combination(12, 4) * combination(8, 4) "
+    "combination(16, 4) * combination(12, 4) * combination(8, 4) * combination(4,4)"
    ]
   },
   {
