--- a/index.ipynb
+++ b/index.ipynb
@@ -257,23 +257,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2386.0"
+       "2627625.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here  # the answer is 2627625.0\n",
-    "(combination(16, 4) * combination(12, 4) * combination(8, 4))"
+    "(combination(16, 4) * combination(12, 4) * combination(8, 4)) / factorial(4)"
    ]
   },
   {
