Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16C4 ways to choose first team, 12C4 ways to choose second team, 8"
+    "16C4 ways to choose first team, 12C4 ways to choose second team, 8C4 ways to choose 3rd team. "
    ]
   },
   {
