Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "16C4 ways to choose first team, 12C4 ways to choose second team, 8C4 ways to choose 3rd team. 4th team's members are remaining 4 players. Order these teams are assigned doesn't"
+    "16C4 ways to choose first team, 12C4 ways to choose second team, 8C4 ways to choose 3rd team. 4th team's members are remaining 4 players. Order these teams are assigned doesn't matter, so divide by 4!."
    ]
   },
   {
